package ub.edu.resources.dao;

import ub.edu.model.Especie;
import ub.edu.model.Excursio;

public interface DAOEspecie extends DAO<Especie>
{

}
