@startuml

title __CEXTREM-VISTA's Class Diagram__\n


    namespace ub.edu {
      class ub.edu.AppMain {
      }
    }

  


    namespace ub.edu {

        class ub.edu.controller.Controller {
        }
      }


  


    namespace ub.edu {

        enum SociStatus {
        }
      }

  


    namespace ub.edu {

        class ub.edu.model.CarteraSocis {
        }
      }

  


    namespace ub.edu {

        class ub.edu.model.Especie {
        }
      }

  


    namespace ub.edu {

        class ub.edu.model.Excursio {
        }
      }

  


    namespace ub.edu {

        class ub.edu.model.Soci {
        }
      }

  


    namespace ub.edu {

        interface ub.edu.resources.dao.DAO {
        }
      }

  


    namespace ub.edu {

        interface ub.edu.resources.dao.DAOEspecie {
        }
      }



    namespace ub.edu {

        interface ub.edu.resources.dao.DAOExcursio {
        }
      }

  


    namespace ub.edu {

        interface ub.edu.resources.dao.DAOSoci {
        }
      }

  


      namespace ub.edu {

          class ub.edu.resources.dao.MOCK.DAOEspecieMOCK {
          }
        }

  


    namespace ub.edu {

          class ub.edu.resources.dao.MOCK.DAOExcursioMOCK {
          }
        }

  


    namespace ub.edu {

          class ub.edu.resources.dao.MOCK.DAOSociMOCK {
          }
        }

  


    namespace ub.edu {

        interface ub.edu.resources.service.AbstractFactoryData {
        }
      }

  


    namespace ub.edu {

        class ub.edu.resources.service.DataService {
        }
      }

  


    namespace ub.edu {

        class ub.edu.resources.service.FactoryMOCK {
        }
      }

  


    namespace ub.edu {

        abstract class ub.edu.view.Escena {
        }
      }

  


    namespace ub.edu {

        class ub.edu.view.EscenaActivitat {
        }
      }

  


    namespace ub.edu {

        class ub.edu.view.EscenaActivitatsExcursio {
        }
      }

  


    namespace ub.edu {

        class ub.edu.view.EscenaExcursio {
        }
      }

  


    namespace ub.edu {

        enum EscenaFactory {
        }
      }

  


    namespace ub.edu {

        class ub.edu.view.EscenaLocalitzacio {
        }
      }

  


    namespace ub.edu {

        class ub.edu.view.EscenaLogin {
        }
      }

  


    namespace ub.edu {

        class ub.edu.view.EscenaMain {
        }
      }

  


    namespace ub.edu {

        class ub.edu.view.Vista {
        }
      }

  

  ub.edu.AppMain -up-|> javafx.application.Application
  ub.edu.AppMain o-- ub.edu.controller.Controller : controller
  ub.edu.AppMain o-- ub.edu.view.Vista : vista
  ub.edu.controller.Controller o-- ub.edu.model.CarteraSocis : carteraSocis
  ub.edu.controller.Controller o-- ub.edu.resources.service.DataService : dataService
  ub.edu.controller.Controller o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.resources.dao.MOCK.DAOEspecieMOCK .up.|> ub.edu.resources.dao.DAOEspecie
  ub.edu.resources.dao.MOCK.DAOExcursioMOCK .up.|> ub.edu.resources.dao.DAOExcursio
  ub.edu.resources.dao.MOCK.DAOSociMOCK .up.|> ub.edu.resources.dao.DAOSoci
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOEspecie : daoEspecie
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOExcursio : daoExcursio
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSoci : daoSoci
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData
  ub.edu.view.Escena o-- ub.edu.controller.Controller : controller
  ub.edu.view.EscenaActivitat -up-|> ub.edu.view.Escena
  ub.edu.view.EscenaActivitatsExcursio -up-|> ub.edu.view.Escena
  ub.edu.view.EscenaExcursio -up-|> ub.edu.view.Escena
  ub.edu.view.EscenaLocalitzacio -up-|> ub.edu.view.Escena
  ub.edu.view.EscenaLogin -up-|> ub.edu.view.Escena
  ub.edu.view.EscenaMain -up-|> ub.edu.view.Escena
  ub.edu.view.Vista o-- ub.edu.controller.Controller : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
